before compute